tonic-hello-grpc/k8s-grpc-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-grpc
  labels:
    app.kubernetes.io/name: hello-grpc
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-grpc
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-grpc
    spec:
      containers:
        - name: hello-grpc
          image: bittrance/hello-rest:rust-grpc-6
          lifecycle:
            preStop:
              sleep:
                seconds: 2
          ports:
            - name: grpc
              containerPort: 8080
          startupProbe:
            failureThreshold: 10
            grpc:
              port: 8080
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: hello-grpc
spec:
  selector:
    app.kubernetes.io/name: hello-grpc
  type: NodePort
  ports:
    - name: grpc
      port: 8080
      targetPort: grpc
